deploy/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: boton
  labels:
    name: boton
