deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boton-web-deployment
  labels:
    app: boton
spec:
  selector:
    matchLabels:
      app: boton-web
  replicas: 1
  template:
    metadata:
      labels:
        app: boton-web
    spec:
      containers:
        - name: boton-web
          image: registry.codegarage.ru/codegarage/boton/boton-web
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-credentials
