deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boton-web
  labels:
    app: boton
spec:
  type: ClusterIP
  selector:
    app: boton-web
  ports:
    - port: 80
